--- a/Credit_Card_Satisfaction_Sentiment_Analysis.ipynb
+++ b/Credit_Card_Satisfaction_Sentiment_Analysis.ipynb
@@ -487,7 +487,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## MILESTONE 3: Data Preprocessing and EDA \n",
+    "## Data Preprocessing and EDA \n",
     "### Transforming Data Using Python Libraries for NLP and Answering Research Questions\n"
    ]
   },
