--- a/Credit_Card_Satisfaction_Sentiment_Analysis.ipynb
+++ b/Credit_Card_Satisfaction_Sentiment_Analysis.ipynb
@@ -2313,7 +2313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **MILESTONE 5: Model Evaluation **\n",
+    "# Model Evaluation \n",
     "### Testing Model Using Appropriate Accuracy Metrics\n"
    ]
   },
